# gjq_client

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/gjq_client/: __init__.py  _version.py
src/gjq_client/backend/: __init__.py  backend.py  backend_configuration.py  backend_properties.py  backend_status.py  gjq_backend.py  options.py
src/gjq_client/client/: __init__.py  auth.py  backend_url_config.py  client_parameters.cp311-win_amd64.pyd  client_parameters.py  runtime.py  session.py
src/gjq_client/client/rest/: __init__.py  backend.py  base.py  task.py  user_token.py
src/gjq_client/docs/: Changelog v0.1.1.md
src/gjq_client/gjq_runtime/: estimator.py  gjq_runtime_service.py  runtime_job.py  sampler.py
src/gjq_client/utils/: __init__.py  backend_converter.py  backend_decoder.py  converters.py  exceptions.py  generate_preset_pass_manager.py  utils.py
