[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gjq-client"
dynamic = ["version"]
description = "Qiskit 2.0 adapter for GuoJi Quantum Cloud Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

authors = [
    {name = "GJQ Cloud Team"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28.0",
    "qiskit>=2.0.0",
    "qiskit-ibm-runtime>=0.44.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://www.tiangongqs.com"
Repository = "https://github.com/GuojiQE/GuoJiQE-Client"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.setuptools.dynamic]
version = { attr = "gjq_client._version.__version__" }
